# leclercq-thesis

./: .gitignore  .gitmodules  README-developer.md  README-user.md  README.md  contributions.md  pyproject.toml  requirements.txt  todo.md
data/: README.md
data-backup/: README.md
datasets/: README.md
notes/: image_analysis.md
src/: README.md  TODO.md  crack_detector.py  create_dataset.py  crop_images.py  demo.py  evaluate_images.py  extract_crop_videos.py  final_data.csv  full_rotation_times.csv  fuse_video_stack.py  grayscale_video.py  image_alignment.ipynb  image_registration.py  masking.py  my_requirements.txt  preprocess_data.py  pyproject.toml  register_video.py  requirements.txt  segformer_masking.py  split_videos.py  video_preprocessing.py  video_processing.py  video_time_measurement.py
src/data_preprocessing/: __init__.py  detect_black_frames.py  split_video.py
src/image_evaluation/: __init__.py  metrics.py
src/image_fusion/: __init__.py  crop_image.py  factory_fuser.py  image_fuser.py
src/image_processing/: crop_images.py  extract_frames_from_video.py  masking.py  torch_preprocess.py
src/image_registration/: README.md  buffer_video.py  check_affine.py  create_video_from_stack.py  draw_displacement.py  find_circle.py  find_rotation_center.py  lightGlue_reg.py  matrix_processing.py  mudic_correlation.py  register_matrix.py  slice_image_stack.py  video_matrix.py
src/metrics/: brenners_method.py  normalised_grey_level_variance.py  (+1 more)
thesis_tex/: Makefile  bibliography.tex  chap01.tex  metadata.tex  thesis.tex
weights/: README.md
(+55 files in other folders)
